<resources>
    <string name="app_name">mikan</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_signselect">Select</string>
    <string name="title_activity_profile">Profile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_displayname">displayname</string>

    <string name="profile">----------------------------プロフィール----------------------------</string>
    <string name="birthday">80dp</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_applyname">applyname must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="displayname">displayname</string>
    <string name="introduct">introduct</string>
    <string name="get">GET</string>
    <string name="post">POST</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
